[gd_scene load_steps=5 format=3 uid="uid://rg3w4huou4ax"]

[ext_resource type="PackedScene" uid="uid://dlx5r1sbrdfga" path="res://scenes/objects/rock.tscn" id="1_ngjor"]
[ext_resource type="Script" path="res://scenes/rooms/rps_room.gd" id="1_xruo1"]
[ext_resource type="PackedScene" uid="uid://l6ra0y288k5f" path="res://scenes/objects/paper.tscn" id="2_vq25w"]
[ext_resource type="PackedScene" uid="uid://b7gio82b8vg3l" path="res://scenes/objects/scissors.tscn" id="3_j037k"]

[node name="RPSRoom" type="Node2D"]
script = ExtResource("1_xruo1")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1200.0
offset_bottom = 920.0
mouse_filter = 2

[node name="Rock" parent="." instance=ExtResource("1_ngjor")]
position = Vector2(269, 716)

[node name="Paper" parent="." instance=ExtResource("2_vq25w")]
position = Vector2(603, 708)

[node name="Scissors" parent="." instance=ExtResource("3_j037k")]
position = Vector2(932, 718)

[connection signal="selected" from="Rock" to="." method="_on_rock_selected"]
[connection signal="selected" from="Paper" to="." method="_on_paper_selected"]
[connection signal="selected" from="Scissors" to="." method="_on_scissors_selected"]
